# hpc

./: .gitignore  .gitmodules
lab01/: .gitignore  CMakeLists.txt  buffer.c  buffer.h  dtmf.c  dtmf.h  dtmf_decoder.c  dtmf_encoder.c  dtmf_private.h  fft.c  fft.h  main.c  run_decode.sh  utils.h  wave.c  wave.h
lab01/docs/: report.typ  title.typ
lab02/code/: CMakeLists.txt
lab02/code/src/: dtmf_decoder.c  main.c
lab02/docs/: report.typ  title.typ
lab02/script/: input.txt
lab03/docs/: report.typ  title.typ
lab04/code/part1/: CMakeLists.txt
lab04/code/part1/include/: image.h  k-means.h
lab04/code/part1/src/: k-means-common.c  k-means-distance-simd.c  k-means-simd.c  k-means.c  main.c  test-simd.c
lab04/code/part2/: CMakeLists.txt
lab04/code/part2/include/: grayscale.h
lab04/code/part2/src/: grayscale-simd.c  grayscale.c  image.c  main.c  test.c
lab04/code/part3/src/: dtmf_decoder.c
lab04/docs/: report.typ  title.typ
lab05/docs/: report.typ  title.typ
lab05/dtmf/: CMakeLists.txt
lab05/dtmf/src/: dtmf_decoder.c  main.c
lab06/docs/: report.typ  title.typ
lab07/code/: test.sh
lab07/code/expected/: expected_dec_1k.txt
lab07/docs/: report.typ  title.typ
lab07/dtmf/: CMakeLists.txt
lab07/dtmf/src/: dtmf.c  dtmf.h  dtmf_decoder.c  dtmf_private.h  main.c  window.h
